add preprocedssor expr layer to support autoconfig of vector params